# directory-tree

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
tests/: conftest.py  test_app.py  test_directory_tree.py
tree/: app.py  cli.py  directory_tree.py
